bug: nested containers with rows breaks the col grid

--- a/scss/_mixins/layout.scss
+++ b/scss/_mixins/layout.scss
@@ -1,19 +1,19 @@
 .container {
-    display: grid;
-    grid-template-columns: repeat(12, [col-start] 1fr);
-    grid-gap: .8rem;
     margin: .8rem auto;
     padding:.8rem;
     width:100%;
 }
 
-.container > * {
-    grid-column: col-start / span 12;
-}
-
 .container > .row {
+    display: grid;
+    grid-template-columns: repeat(12, [col-start] 1fr);
+    grid-gap: .8rem;
     margin-left: -.8rem;
     margin-right: -.8rem;
+}
+
+.container > .row > * {
+    grid-column: col-start / span 12;
 }
 
 img,
